@startuml

title __SPACEINVADERS's Class Diagram__\n

  namespace com.javarush.games.spaceinvaders {
    enum Direction {
      DOWN
      LEFT
      RIGHT
      UP
    }
  }
  

  namespace com.javarush.games.spaceinvaders {
    class com.javarush.games.spaceinvaders.ShapeMatrix {
        {static} + BOSS_ANIMATION_FIRST : int[][]
        {static} + BOSS_ANIMATION_SECOND : int[][]
        {static} + BULLET : int[][]
        {static} + DEAD_PLAYER : int[][]
        {static} + ENEMY : int[][]
        {static} + KILL_BOSS_ANIMATION_FIRST : int[][]
        {static} + KILL_BOSS_ANIMATION_SECOND : int[][]
        {static} + KILL_BOSS_ANIMATION_THIRD : int[][]
        {static} + KILL_ENEMY_ANIMATION_FIRST : int[][]
        {static} + KILL_ENEMY_ANIMATION_SECOND : int[][]
        {static} + KILL_ENEMY_ANIMATION_THIRD : int[][]
        {static} + KILL_PLAYER_ANIMATION_FIRST : int[][]
        {static} + KILL_PLAYER_ANIMATION_SECOND : int[][]
        {static} + KILL_PLAYER_ANIMATION_THIRD : int[][]
        {static} + PLAYER : int[][]
        {static} + WIN_PLAYER : int[][]
    }
  }
  

  namespace com.javarush.games.spaceinvaders {
    class com.javarush.games.spaceinvaders.SpaceInvadersGame {
        {static} + COMPLEXITY : int
        {static} + HEIGHT : int
        {static} + STATUS_BAR_HEIGHT : int
        {static} + WIDTH : int
        {static} - PLAYER_BULLETS_MAX : int
        - animationsCount : int
        - enemyBullets : List<Bullet>
        - isGameStopped : boolean
        - playerBullets : List<Bullet>
        - score : int
        - stars : List<Star>
        + initialize()
        + onKeyPress()
        + onKeyReleased()
        + onTurn()
        + setCellValueEx()
        - check()
        - createGame()
        - createStars()
        - drawField()
        - drawScene()
        - moveSpaceObjects()
        - removeDeadBullets()
        - showStartScreen()
        - stopGame()
        - stopGameWithDelay()
    }
  }
  

  com.javarush.games.spaceinvaders.SpaceInvadersGame -up-|> com.javarush.engine.cell.Game
  com.javarush.games.spaceinvaders.SpaceInvadersGame o-- com.javarush.games.spaceinvaders.gameobjects.EnemyFleet : enemyFleet
  com.javarush.games.spaceinvaders.SpaceInvadersGame o-- com.javarush.games.spaceinvaders.gameobjects.PlayerShip : playerShip


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
